[package]
name = "bytebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
generic-array = "0.14.6"
hex = "0.4.3"
hkdf = "0.12.3"
rand = "0.8.5"
sha2 = "0.10.6"
sha256 = "1.1.2"
